Add Docker and Cloud Build configuration for ChatDM deployment
- Introduced .dockerignore to exclude unnecessary files from Docker context.
- Created Dockerfile for multi-stage build of ChatDM, optimizing for Cloud Run.
- Added cloudbuild.yaml for automated deployment to Cloud Run on main branch push.
- Implemented deployment scripts for GCP setup and Cloud Run deployment.
- Enhanced pom.xml with updated dependencies for Spring AI and GCP integration.
- Added ResourceResolver for handling resource paths in both local and cloud environments.
- Implemented GCS-based storage for journal data, supporting both local and cloud profiles.
- Updated PdfIndexBuilder to support indexing from GCS and local PDFs.
- Improved PdfTextCache for efficient PDF text extraction with caching.

These changes facilitate a streamlined deployment process and enhance the application's cloud capabilities.